Added Hustlers tab and simplified showcase section

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -30,19 +30,22 @@
           <a href="{{ url_for('awards') }}" class="nav-link">Awards</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
+          <a href="{{ url_for('hustlers') }}" class="nav-link">Hustlers</a>
         </li>
         <li class="nav-item">
           <a href="{{ url_for('microbootcamp') }}" class="nav-link">JS Study Group</a>
         </li>
         <li class="nav-item">
+          <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
+        </li>
+        <li class="nav-item">
           <a href="{{ url_for('merch') }}" class="nav-link">Merch</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('support') }}" class="nav-link">Support Us</a>
+          <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('contact') }}" class="nav-link">Contact</a>
+          <a href="{{ url_for('support') }}" class="nav-link">Support Us</a>
         </li>
       </ul>
     </div>
