--- a/templates/index.html
+++ b/templates/index.html
@@ -3,37 +3,22 @@
 
 {% block content %}
   <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-        
-            <h1 class="display-3 mt-5 pt-1 top-spacing" style="font-family:Montserrat;">
-              Sydney Volunteer Programmers
-            </h1>
-        
-           </div>
-         </div>
-      </div>    
+  <section>
+    <div class="col-lg-12 text-center mt-15">
+        <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
+          Sydney Volunteer Programmers
+        </h1>
+        <h2 style="font-family:Montserrat;">
+          1st place, Vibewire's Hack4FI (Financial Inclusion)
+        </h2>
+        <h2 style="font-family:Montserrat;">
+          3rd place, Vibewire's Hack4Homelessness
+        </h2>
+        <br>
+        <br>
+        <br>
     </div>
-
   </section>
-
-  <!-- Our Services-->
-  <section id="services" class="my-5 text-center bg-info spacing-up">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <div class="mb-5">
-              <h1 class="text-primary pb-3 mt-5">
-                <!-- Our Services --> 
-              </h1>
-            </div>
-          </div>
-      </div>  
-  </section> 
 
   <section id="home-icons" class="py-5 move-up bg-light">
     <div class="container">
