--- a/templates/merch.html
+++ b/templates/merch.html
@@ -3,22 +3,12 @@
 
 {% block content %}
   <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-        
-            <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              Merch
-            </h1>
-
-           </div>
-         </div>
-      </div>    
+  <section>
+    <div class="col-lg-12 text-center mt-15">
+        <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
+          Merch
+        </h1>
     </div>
-
   </section>
 
   <!-- Contact -->
@@ -26,12 +16,12 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h4 style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat">All proceeds will go to the following:</h4>
-          <ul style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 15px;">
-            <li>80% Community Fund</li>
-            <li>10% Free Code Camp</li>
-            <li>5% Mentors Fund</li>
-            <li>5% Operating Expenses</li>
+          <h4 style="font-family: Montserrat">All proceeds will go to the following:</h4>
+          <ul style="font-family: Montserrat; font-size: 15px;">
+            <li>90% Community Fund</li>
+            <li>5% Free Code Camp</li>
+            <li>2.5% Mentors Fund</li>
+            <li>2.5% Operating Expenses</li>
           </ul>
         </div>
   </section>
@@ -48,7 +38,7 @@
                           <img class="pic-1" src="/static/img/codesydney-mens-t-shirt.jpg">
                       </a>
                   </div>
-                  <div class="product-content" style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 12px;">
+                  <div class="product-content" style="font-family: Montserrat; font-size: 12px;">
                       <h2 class="title">Men's T-Shirt</h2>
                   </div>
               </div>
@@ -62,7 +52,7 @@
                         <img class="pic-1" src="/static/img/codesydney-mens-premium-hoodie.jpg">
                     </a>
                 </div>
-                <div class="product-content" style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 12px;">
+                <div class="product-content" style="font-family: Montserrat; font-size: 12px;">
                     <h2 class="title">Men's Premium Hoodie</h2>
                 </div>
             </div>
@@ -75,7 +65,7 @@
                       <img class="pic-1" src="/static/img/codesydney-womens-t-shirt.jpg">
                   </a>
               </div>
-              <div class="product-content" style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 12px;">
+              <div class="product-content" style="font-family: Montserrat; font-size: 12px;">
                   <h2 class="title">Women's T-Shirt</h2>
               </div>
           </div>
@@ -88,7 +78,7 @@
                       <img class="pic-1" src="/static/img/codesydney-womens-premium-hoodie.jpg">
                   </a>
               </div>
-              <div class="product-content" style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 12px;">
+              <div class="product-content" style="font-family: Montserrat; font-size: 12px;">
                   <h2 class="title">Women's Premium Hoodie</h2>
               </div>
           </div>
@@ -101,7 +91,7 @@
                       <img class="pic-1" src="/static/img/codesydney-bag.jpg">
                   </a>
               </div>
-              <div class="product-content" style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 12px;">
+              <div class="product-content" style="font-family: Montserrat; font-size: 12px;">
                   <h2 class="title">Code.Sydney Bag</h2>
               </div>
           </div>
@@ -114,7 +104,7 @@
                       <img class="pic-1" src="/static/img/codesydney-cap.jpg">
                   </a>
               </div>
-              <div class="product-content" style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 12px;">
+              <div class="product-content" style="font-family: Montserrat; font-size: 12px;">
                   <h2 class="title">Code.Sydney Cap</h2>
               </div>
           </div>
