--- a/templates/jsstudygroup.html
+++ b/templates/jsstudygroup.html
@@ -1,19 +1,10 @@
 {% extends 'layout.html' %} {% block content %}
 <!-- SHOWCASE -->
-<section id="showcase">
-  <div class="primary-overlay text-white">
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-12 text-center mt-5">
-          <h1
-            class="display-3 mt-5 pt-1 top-spacing"
-            style="font-family: Montserrat"
-          >
-            JavaScript Study Group
-          </h1>
-        </div>
-      </div>
-    </div>
+<section>
+  <div class="col-lg-12 text-center mt-15">
+      <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
+        JS Study Group
+      </h1>
   </div>
 </section>
 <!--
