--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -3,30 +3,20 @@
 
 {% block content %}
   <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-        
-            <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              The Hexagon
-            </h1>
-        
-           </div>
-         </div>
-      </div>    
+  <section>
+    <div class="col-lg-12 text-center mt-15">
+        <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
+          The Hexagon
+        </h1>
     </div>
-
   </section>
 
   <!-- THE HEXAGON -->
 <br/>
 <div class="text-center">
-  <h1 style="font-family:Montserrat;">
+  <h2 style="font-family:Montserrat;">
     Monthly Newsletter
-  </h1>
+  </h2>
 </div>
 
 <body><table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
