--- a/templates/support.html
+++ b/templates/support.html
@@ -3,22 +3,12 @@
 
 {% block content %}
   <!-- SHOWCASE -->
-  <section id="showcase">
-
-    <div class="primary-overlay text-white">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center mt-5">
-        
-            <h1 class="display-3 mt-5 pt-5 top-spacing" style="font-family:Montserrat;">
-              Thanks for your support
-            </h1>
-        
-           </div>
-         </div>
-      </div>    
+  <section>
+    <div class="col-lg-12 text-center mt-15">
+        <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
+          Support us
+        </h1>
     </div>
-
   </section>
 
   <!-- Contact -->
@@ -26,14 +16,14 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12">
-          <h4 style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat">All proceeds will go to the following:</h4>
-          <ul style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat; font-size: 15px;">
-            <li>80% Community Fund</li>
-            <li>10% Free Code Camp</li>
-            <li>5% Mentors Fund</li>
-            <li>5% Operating Expenses</li>
+          <h4 style="font-family: Montserrat">All proceeds will go to the following:</h4>
+          <ul style="font-family: Montserrat; font-size: 15px;">
+            <li>90% Community Fund</li>
+            <li>5% Free Code Camp</li>
+            <li>2.5% Mentors Fund</li>
+            <li>2.5% Operating Expenses</li>
           </ul>
-          <p style="color: rgba(13, 52, 102, 0.904); font-family: Montserrat">Kindly be advised that any donation is not tax deductible</p>
+          <p style="font-family: Montserrat">Kindly be advised that any donation is not tax deductible</p>
           <form action="https://www.paypal.com/donate" method="post" target="_top">
             <input type="hidden" name="hosted_button_id" value="9G868PLRQQTJJ" />
             <input type="image" src="https://www.paypalobjects.com/en_AU/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
