--- a/templates/hustlers.html
+++ b/templates/hustlers.html
@@ -5,6 +5,10 @@
       <h1 class="display-4 mt-5 pt-3 top-spacing" style="font-family:Montserrat;">
         Hustlers
       </h1>
+      <br>
+      <h4 style="font-family:Montserrat;">
+        Feel free to directly contact any of our hustlers below if you have some personal side projects in mind.
+      </h4>
   </div>
 </section>
 
