--- a/templates/index.html
+++ b/templates/index.html
@@ -352,6 +352,12 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           </div>
 
           <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/paact.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></h4>
+            <p class="service-text">Prisoners Aid has been operating as a community organisation in Canberra since 1963. Over the years, they have assisted thousands of clients - including prisoners, released prisoners, families of prisoners, and those involved in the court system.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/fcc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></h4>
             <p class="service-text">Free Code Camp is an open source community that helps you learn to code, build pro bono projects for nonprofits, and get a job as a developer.</p>
