--- a/templates/support.html
+++ b/templates/support.html
@@ -19,7 +19,7 @@
           <h4 style="font-family: Montserrat">All proceeds will go to the following:</h4>
           <ul style="font-family: Montserrat; font-size: 15px;">
             <li>90% Community Fund</li>
-            <li>5% Free Code Camp</li>
+            <li>5% <a href="https://www.freecodecamp.org" target="_blank">Free Code Camp</a></li>
             <li>2.5% Mentors Fund</li>
             <li>2.5% Operating Expenses</li>
           </ul>
