--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -75,35 +75,35 @@
         <td>2019 OCTOBER</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
         <td>Interim Landing Page</td>
-        <td>Completed</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20200301</td>
         <td>2020 MARCH</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
         <td>Newly revamped website</td>
-        <td>Completed</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20200501</td>
         <td>2020 MAY</td>
         <td><a href="http://www.propertyextractor.com.au/" target="_blank">Via a volunteer worker of two Sydney-based NFPs helping those who are on the brink of homelessness</a></td>
         <td>Rental accomodation extractor app</td>
-        <td>Completed</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20210101</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
         <td>Maintenance of current website</td>
-        <td>Ongoing</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
         <td>20210102</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
         <td>Modernise current website</td>
-        <td>Proposed</td>
+        <td style="color:rgb(160, 26, 26)">Approved</td>
       </tr>
       <tr>
         <td>20210103</td>
@@ -117,6 +117,13 @@
         <td>2021 JANUARY</td>
         <td><a href="https://www.ims.org.au/" target="_blank">Illawarra Multicultural Services</a></td>
         <td>New website for a local community group</td>
+        <td>Proposed</td>
+      </tr>
+      <tr>
+        <td>20210218</td>
+        <td>2021 FEBRUARY</td>
+        <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
+        <td>Website Revamp with portal to capture Client Engagement Journal</td>
         <td>Proposed</td>
       </tr>
   </tbody>
