--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202102</td>
+              <td>2021 FEBRUARY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_February_2021.pdf') }}" target="_blank">The Hexagon February 2021</a></td>
+            </tr>
+            <tr>
               <td>202101</td>
               <td>2021 JANUARY</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_January_2021.pdf') }}" target="_blank">The Hexagon January 2021</a></td>
