Updated volunteering status dashboard

--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -124,6 +124,13 @@
         <td>2021 FEBRUARY</td>
         <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
         <td>Website Revamp with portal to capture Client Engagement Journal</td>
+        <td style="color:rgb(160, 26, 26)">Approved</td>
+      </tr>
+      <tr>
+        <td>20210304</td>
+        <td>2021 MARCH</td>
+        <td><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour</a></td>
+        <td>Online Membership Portal</td>
         <td>Proposed</td>
       </tr>
   </tbody>
