March Newsletter and WoC addition

--- a/templates/index.html
+++ b/templates/index.html
@@ -358,9 +358,21 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
           </div>
 
           <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/woc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour Australia</a></h4>
+            <p class="service-text">Women of Colour Australia is a non-profit organisation run by women of colour for women of colour. They exist to champion Australia's Women of Colour through programs of education, community support initiatives, and advocacy work.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/fcc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://www.freecodecamp.org/" target="_blank">Free Code Camp</a></h4>
             <p class="service-text">Free Code Camp is an open source community that helps you learn to code, build pro bono projects for nonprofits, and get a job as a developer.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/actura_logo.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="http://www.actura.com.au/" target="_blank">Actura Australia</a></h4>
+            <p class="service-text">Actura empowers youth to master the critical STEAM related skill sets for their future success.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
@@ -373,12 +385,6 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
             <img src="{{ url_for('static', filename='img/prettyprinted.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://prettyprinted.com/" target="_blank">Prettyprinted</a></h4>
             <p class="service-text">Prettyprinted is a specialised Flask online training course provider. They are our education partner for our Flask training.</p>
-          </div>
-
-          <div class="col-md-4 mb-4 text-center">
-            <img src="{{ url_for('static', filename='img/actura_logo.jpg') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
-            <h4><a href="http://www.actura.com.au/" target="_blank">Actura Australia</a></h4>
-            <p class="service-text">Actura empowers youth to master the critical STEAM related skill sets for their future success.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
