--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -117,7 +117,7 @@
         <td>2021 JANUARY</td>
         <td><a href="https://www.ims.org.au/" target="_blank">Illawarra Multicultural Services</a></td>
         <td>New website for a local community group</td>
-        <td>Proposed</td>
+        <td style="color:rgb(160, 26, 26)">Approved</td>
       </tr>
       <tr>
         <td>20210218</td>
@@ -129,9 +129,16 @@
       <tr>
         <td>20210304</td>
         <td>2021 MARCH</td>
-        <td><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour</a></td>
+        <td><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour Australia</a></td>
         <td>Online Membership Portal</td>
-        <td>Proposed</td>
+        <td style="color:rgb(160, 26, 26)">Approved</td>
+      </tr>
+      <tr>
+        <td>20210317</td>
+        <td>2021 MARCH</td>
+        <td><a>Dr. Lukas Carey</a></td>
+        <td>Personal Volunteering Portfolio</td>
+        <td style="color:rgb(160, 26, 26)">Approved</td>
       </tr>
   </tbody>
   <tfoot>
