--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -30,10 +30,13 @@
           <a href="{{ url_for('awards') }}" class="nav-link">Awards</a>
         </li>
         <li class="nav-item">
+          <a href="{{ url_for('gallery') }}" class="nav-link">Gallery</a>
+        </li>
+        <li class="nav-item">
           <a href="{{ url_for('hustlers') }}" class="nav-link">Hustlers</a>
         </li>
         <li class="nav-item">
-          <a href="{{ url_for('microbootcamp') }}" class="nav-link">JS Study Group</a>
+          <a href="{{ url_for('microbootcamp') }}" class="nav-link">Study Group</a>
         </li>
         <li class="nav-item">
           <a href="{{ url_for('newsletter') }}" class="nav-link">Newsletter</a>
