--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202104</td>
+              <td>2021 APRIL</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_April_2021.pdf') }}" target="_blank">The Hexagon April 2021</a></td>
+            </tr>
+            <tr>
               <td>202103</td>
               <td>2021 MARCH</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_March_2021.pdf') }}" target="_blank">The Hexagon March 2021</a></td>
