--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -92,6 +92,13 @@
         <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
+        <td>20200531</td>
+        <td>2020 MAY</td>
+        <td>TasksTech</td>
+        <td>Work Journal App for Electricians</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+      </tr>
+      <tr>
         <td>20210101</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
@@ -102,43 +109,36 @@
         <td>20210102</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
-        <td>Modernise current website</td>
-        <td style="color:rgb(160, 26, 26)">Approved</td>
+        <td>Referral Management System</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
         <td>20210103</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.ims.org.au/" target="_blank">Illawarra Multicultural Services</a></td>
         <td>Community marketplace app</td>
-        <td>Proposed</td>
-      </tr>
-      <tr>
-        <td>20210104</td>
-        <td>2021 JANUARY</td>
-        <td><a href="https://www.ims.org.au/" target="_blank">Illawarra Multicultural Services</a></td>
-        <td>New website for a local community group</td>
-        <td style="color:rgb(160, 26, 26)">Approved</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
         <td>20210218</td>
         <td>2021 FEBRUARY</td>
         <td><a href="http://paact.org.au/" target="_blank">Prisoners Aid (ACT)</a></td>
-        <td>Website Revamp with portal to capture Client Engagement Journal</td>
-        <td style="color:rgb(160, 26, 26)">Approved</td>
+        <td>Client Expense Management App and Website Revamp</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
         <td>20210304</td>
         <td>2021 MARCH</td>
         <td><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour Australia</a></td>
         <td>Online Membership Portal</td>
-        <td style="color:rgb(160, 26, 26)">Approved</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
         <td>20210317</td>
         <td>2021 MARCH</td>
         <td><a>Dr. Lukas Carey</a></td>
         <td>Personal Volunteering Portfolio</td>
-        <td style="color:rgb(160, 26, 26)">Approved</td>
+        <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
   </tbody>
   <tfoot>
