--- a/templates/awards.html
+++ b/templates/awards.html
@@ -62,9 +62,104 @@
           </div>
         </div>
 
+        <div class="col-lg-3 col-md-6">
+          <div class="card h-100">
+            <div class="card-body">
+              <img src="{{ url_for('static', filename='img/steve.jpg') }}" alt="" class="img-fluid rounded-circle w-50 mb-3">
+              <h4>Stephen Melben Corral</h4>
+              <a href="#" target="_blank">
+                <h6 class="text-muted">Lukas Carey</h6>
+              </a>
+              <a href="https://talkingtimepodcast.com.au/" target="_blank">
+                <h6 class="text-muted">Talking Time Podcast</h6>
+              </a>
+              <p class="team-text">Stephen Melben Corral had volunteered his time and coding skills to amplify the advocacy of Lukas Carey and Alicia Hebb around the importance of Convict Criminology by building their web presence. Both Lukas and Alicia are actively engaged in the development of policies and procedures and the educational opportunities provided to current and previously incarcerated people.</p>
+              <div class="d-flex justify-content-center">
+                <div class="p-4">
+                  <a href="https://www.linkedin.com/in/stephen-melben-corral-73468b6b/" target="_blank">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
 
+  </section>
+
+  <div class="spacing"></div>
+
+  <section id="home-icons" class="py-5 move-up-more bg-light">
+    <div class="container">
+      <h2 style="font-family:Montserrat;">
+        Testimonials
+      </h2>
+      <br>      
+      <div class="row">
+        <div class="col-md-4 mb-4 text-center">
+          <p class="service-text">
+            "This has been the second time that Deadly Connections have engaged
+            Code.Sydney on an IT project. The first was when I requested them to
+            develop a landing page as an interim while waiting for the full
+            website. Even though Code.Sydney are a volunteer group of developers,
+            their dedication to the satisfactory completion of their projects is
+            undertaken with the utmost professionalism. <br />
+            Code.Sydney kept me updated every step of the way ensuring that every
+            detail is followed and well-executed. Another key differentiator is
+            their level of support after going live, they are always ready to
+            answer our call when help is needed and a regular monthly report of
+            website activities is being generated which can help us determine
+            future improvements."
+          </p>
+          <p class="service-text">
+            - Carly Stanley, CEO and Founder (<a
+              href="https://www.deadlyconnections.org.au/"
+              target="_blank"
+              >DCCAJS</a
+            >)
+          </p>
+        </div>
+  
+        <div class="col-md-4 mb-4 text-center">
+          <p class="service-text">
+            "Thank you, Code.Sydney for recommending Kevin Foong to work on the
+            PropertyExtractor project. It has been a pleasure working with him
+            throughout the journey. He is very responsive and always helpful from
+            prototyping until final delivery. I learnt that he is one of the best
+            mentors in Code.Sydney. <br />
+            Above all, I am most grateful for Kevin’s initiative and guidance to
+            successfully develop a working prototype that my stakeholders are
+            happy to use hence allowing my project to proceed to the next stage.
+            May Code.Sydney and Kevin keep up the good work!"
+          </p>
+          <p class="service-text">
+            - Ling-Pei Lin, Volunteer worker for two Sydney-based NFPs
+          </p>
+        </div>
+  
+        <div class="col-md-4 mb-4 text-center">
+          <p class="service-text">
+            "Talking Time with Lukas and Alicia is a podcast show being run by volunteers. 
+            We didn’t have the time or know how to produce a quality website or way for people 
+            to get in contact with us. Coming to our rescue was Engamar Bollas and Stephen Melben Corral from Code.Sydney. 
+            Even though Code.Sydney is a volunteer group of web developers, the way they steered 
+            us through the process of developing and setting up a website for our show, was second to none. 
+            With constant communication, advice and expert direction we decided upon the functionality 
+            we needed, the features we required and what access we and our listeners needed. The friendly and 
+            personalised nature of the Code.Sydney team would make us recommend their work to any other 
+            Not For profit or volunteer group. We can not thank Code.Sydney enough and hope to work with them 
+            again soon as we continue to grow. "
+          </p>
+          <p class="service-text">
+            - Lukas Carey and Alicia Hebb (Founders and Hosts of Talking Time with Lukas and Alicia Podcast) 
+          </p>
+        </div>
+
+      </div>
+    </div>
   </section>
 
 
