--- a/templates/index.html
+++ b/templates/index.html
@@ -15,10 +15,16 @@
           3rd place, Vibewire's Hack4Homelessness
         </h2>
         <br>
-        <br>
-        <br>
     </div>
   </section>
+
+  <section>
+    <div class="col-lg-12 text-center mt-15">
+      <iframe width="600" height="355" src="https://www.youtube.com/embed/H1CH5BdN-Ng" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <div class="spacing"></div>       
 
   <section id="home-icons" class="py-5 move-up bg-light">
     <div class="container">
@@ -361,6 +367,12 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
             <img src="{{ url_for('static', filename='img/woc.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://womenofcolour.org.au/" target="_blank">Women of Colour Australia</a></h4>
             <p class="service-text">Women of Colour Australia is a non-profit organisation run by women of colour for women of colour. They exist to champion Australia's Women of Colour through programs of education, community support initiatives, and advocacy work.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/talkingtime.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://talkingtimepodcast.com.au/" target="_blank">Talking Time Podcast</a></h4>
+            <p class="service-text">Talking Time is a place where uncomfortable conversations about incarceration and everything to do with it take place. It is where the voice of those who have lived it, have loved ones that have or are living it, work in it or have an interest in it, come together in a safe and supportive place.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
