--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -10,54 +10,6 @@
 
 <div class="spacing"></div>
 
-<section id="home-icons" class="py-5 move-up-more bg-light">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-4 mb-4 text-center">
-        <p class="service-text">
-          "This has been the second time that Deadly Connections have engaged
-          Code.Sydney on an IT project. The first was when I requested them to
-          develop a landing page as an interim while waiting for the full
-          website. Even though Code.Sydney are a volunteer group of developers,
-          their dedication to the satisfactory completion of their projects is
-          undertaken with the utmost professionalism. <br />
-          Code.Sydney kept me updated every step of the way ensuring that every
-          detail is followed and well-executed. Another key differentiator is
-          their level of support after going live, they are always ready to
-          answer our call when help is needed and a regular monthly report of
-          website activities is being generated which can help us determine
-          future improvements."
-        </p>
-        <p class="service-text">
-          - Carly Stanley, CEO and Founder (<a
-            href="httpS://www.deadlyconnections.org.au/"
-            target="_blank"
-            >DCCAJS</a
-          >)
-        </p>
-      </div>
-
-      <div class="col-md-4 mb-4 text-center">
-        <p class="service-text">
-          "Thank you, Code.Sydney for recommending Kevin Foong to work on the
-          PropertyExtractor project. It has been a pleasure working with him
-          throughout the journey. He is very responsive and always helpful from
-          prototyping until final delivery. I learnt that he is one of the best
-          mentors in Code.Sydney. <br />
-          Above all, I am most grateful for Kevin’s initiative and guidance to
-          successfully develop a working prototype that my stakeholders are
-          happy to use hence allowing my project to proceed to the next stage.
-          May Code.Sydney and Kevin keep up the good work!"
-        </p>
-        <p class="service-text">
-          - Ling-Pei Lin, Volunteer worker for two Sydney-based NFPs
-        </p>
-      </div>
-
-    </div>
-  </div>
-</section>
-
 <body>
   <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%">
   <thead>
@@ -99,13 +51,6 @@
         <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
       <tr>
-        <td>20210101</td>
-        <td>2021 JANUARY</td>
-        <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
-        <td>Maintenance of current website</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
-      </tr>
-      <tr>
         <td>20210102</td>
         <td>2021 JANUARY</td>
         <td><a href="https://www.deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></td>
@@ -137,9 +82,17 @@
         <td>20210317</td>
         <td>2021 MARCH</td>
         <td><a>Dr. Lukas Carey</a></td>
-        <td>Personal Volunteering Portfolio</td>
+        <td>Personal Advocacy Portfolio</td>
         <td style="color:rgb(24, 133, 206)">Ongoing</td>
       </tr>
+      <tr>
+        <td>20210505</td>
+        <td>2021 MAY</td>
+        <td><a href="https://talkingtimepodcast.com.au/" target="_blank">Talking Time Podcast</a></td>
+        <td>Website to showcase podcast on Convict Criminology</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
+      </tr>
+
   </tbody>
   <tfoot>
     <tr>
