Project updates and May Newsletter

--- a/templates/volunteering.html
+++ b/templates/volunteering.html
@@ -81,9 +81,9 @@
       <tr>
         <td>20210317</td>
         <td>2021 MARCH</td>
-        <td><a>Dr. Lukas Carey</a></td>
+        <td><a href="https://www.lukascarey.com.au/" target="_blank">Lukas Carey Advocacy on Convict Criminology</a></td>
         <td>Personal Advocacy Portfolio</td>
-        <td style="color:rgb(24, 133, 206)">Ongoing</td>
+        <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
       <tr>
         <td>20210505</td>
@@ -92,7 +92,6 @@
         <td>Website to showcase podcast on Convict Criminology</td>
         <td style="color:rgb(61, 134, 59)">Completed</td>
       </tr>
-
   </tbody>
   <tfoot>
     <tr>
