Fixed DC link, added Lukas, and fixed newsletter header

--- a/templates/index.html
+++ b/templates/index.html
@@ -347,7 +347,7 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
 
           <div class="col-md-4 mb-4 text-center">
             <img src="{{ url_for('static', filename='img/dccajs.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
-            <h4><a href="https://www.freecodecamp.org/" target="_blank">Deadly Connections Community and Justice Services Limited</a></h4>
+            <h4><a href="https://deadlyconnections.org.au/" target="_blank">Deadly Connections Community and Justice Services Limited</a></h4>
             <p class="service-text">Deadly Connections is a Aboriginal Community Led, Not For Profit Organisation that breaks the cycles of disadvantage and trauma to directly address the over-representation of Aboriginal people in the child protection and justice system/s.</p>
           </div>
 
@@ -373,6 +373,12 @@ Qj can usually be found deep in some obscure documentation or sharing his knowle
             <img src="{{ url_for('static', filename='img/talkingtime.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
             <h4><a href="https://talkingtimepodcast.com.au/" target="_blank">Talking Time Podcast</a></h4>
             <p class="service-text">Talking Time is a place where uncomfortable conversations about incarceration and everything to do with it take place. It is where the voice of those who have lived it, have loved ones that have or are living it, work in it or have an interest in it, come together in a safe and supportive place.</p>
+          </div>
+
+          <div class="col-md-4 mb-4 text-center">
+            <img src="{{ url_for('static', filename='img/lukascarey.png') }}" width="250px" class="mb-2 img-fluid" style="height:95px;width:355px;">
+            <h4><a href="https://www.lukascarey.com.au/" target="_blank">Lukas Carey</a></h4>
+            <p class="service-text">Lukas Carey is a strong advocate for the importance of Convict Criminology and Lived experience to provide balance to research and discussion and to represent the missing voice, those that have lived incarceration.</p>
           </div>
 
           <div class="col-md-4 mb-4 text-center">
