--- a/templates/newsletter.html
+++ b/templates/newsletter.html
@@ -29,6 +29,11 @@
         </thead>
         <tbody>
             <tr>
+              <td>202107</td>
+              <td>2021 JULY</td>
+              <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_July_2021.pdf') }}" target="_blank">The Hexagon July 2021</a></td>
+            </tr>
+            <tr>
               <td>202106</td>
               <td>2021 JUNE</td>
               <td><a href="{{ url_for('static', filename='pdf/The_Hexagon_June_2021.pdf') }}" target="_blank">The Hexagon June 2021</a></td>
